# cellular-automaton

./: Cargo.toml  flake.nix  index.html
docs/: index-5e71b0730496b9bd.js  index-5e71b0730496b9bd_bg.wasm  index-60332771826fe815.css  index-b01be3d525fc303b.js  index-b01be3d525fc303b_bg.wasm  index-f7fa42454e84b507.css  index.html
docs/snippets/cellular-automaton-d1b528da42ed8f6c/js/: resize-canvas.js
src/: automaton.rs  main.rs  settings.rs  supervisor.rs
style/: index.scss
