[package]
name = "cellular-automaton"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
yew = "0.18"
wasm-bindgen = "0.2"
weblog = "0.3"
gloo-timers = "0.2"
nalgebra = "0.29"
lazy_static = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'Element',
  'Document',
  'Window',
]

[profile.release]
lto = true
